--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tenders",
   "version": "0.1.0",
   "dependencies": {
-    "web-vitals": "^2.0.0"
+    "nodemon": "1.2.0",
+    "web-vitals": "2.0.0"
   }
 }
